# SiftRobust

./: .env.example  .gitignore  PUBLISH.md  README.md  pyproject.toml
docs/: design_decisions.md  gmail_setup.md
evals/: last_provider_comparison.json  last_provider_comparison.md
scripts/: run_one_provider.py
src/sift/: __init__.py  actions.py  api.py  catalog.py  cli.py  config.py  drafter.py  gmail_client.py  models.py  provider_errors.py  settings.py
src/sift/prompts/: classify.md
src/sift/providers/: google.py  openai_compat.py
tests/: test_actions.py  test_provider_errors.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/api/: client.ts
web/src/components/: ApplyPolicyPanel.tsx  CategoryBadge.tsx  ComposeDialog.tsx  DraftEditor.tsx  DraftsView.tsx  InboxView.tsx  LabelManager.tsx  Layout.tsx  MorningBrief.tsx  ProviderErrorBanner.tsx  SentView.tsx  SettingsDialog.tsx  ThreadCard.tsx
web/src/lib/: utils.ts
